Bug 1975576 - Allow ioctls used by WebRTC for interface info in Linux socket process sandbox. r=gcp

Differential Revision: https://phabricator.services.mozilla.com/D265735